--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_4_content.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_4_content.tex
@@ -549,17 +549,17 @@ mymcmc.run(n_gen)
 
 {\it Example results are provided as {\tt output\_example/epoch\_phy.*} and {\tt output\_example/simple\_phy.*} }
 
-To understand the influence of the epoch model on ancestral range and divergence time estimation, it is important to run addition analyses with alternative settings.
-Scripts to jointly estimate molecular evolution, historical biogeographic, and phylogenetic parameters are available as {\tt scripts/run\_simple\_phy.Rev} and {\tt scripts/run\_epoch\_phy.Rev}.
-The ``epoch'' analysis is identical to the analysis just described.
-The ``simple'' analysis is similar to the ``epoch'' analysis, except it substitutes the paleogeography-aware model of range evolution (see Section \ref{sec:bg_epoch}) for a paleogeography-naive model (see Section \ref{sec:bg_simple}).
-
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=0.8\textwidth]{figures/fig_simple_phy_RevGadgets_ase.pdf}
 \caption{Joint estimate of phylogeny and biogeography, ignoring paleogeography.}
 \label{fig:simple_phy}
 \end{figure}
+
+To understand the influence of the epoch model on ancestral range and divergence time estimation, it is important to run addition analyses with alternative settings.
+Scripts to jointly estimate molecular evolution, historical biogeographic, and phylogenetic parameters are available as {\tt scripts/run\_simple\_phy.Rev} and {\tt scripts/run\_epoch\_phy.Rev}.
+The ``epoch'' analysis is identical to the analysis just described.
+The ``simple'' analysis is similar to the ``epoch'' analysis, except it substitutes the paleogeography-aware model of range evolution (see Section \ref{sec:bg_epoch}) for a paleogeography-naive model (see Section \ref{sec:bg_simple}).
 
 \begin{figure}[!ht]
 \centering
@@ -570,10 +570,12 @@ The ``simple'' analysis is similar to the ``epoch'' analysis, except it substitu
 
 We see that simple analysis (Fig \ref{fig:simple_phy}) estimates the ancestral range at the root of the clade as Maui + Mainland (MZ).
 This is unrealistic, both because of the extreme distance between those areas, but also the simple analysis estimates the root age to be 10.3 (HPD95\% 4.6, 15.0) Ma, well before Maui originated.
+The simple model also infers Kauai+Maui (KM) as the ancestral range of living silverswords and a crown age of 7.2 (HPD95\% 2.5, 13.5) Ma, which is impossibly ancient given the islands' ages.
 
 The epoch analysis (Fig \ref{fig:epoch_phy}) produces more sensible ancestral range estimates, with Kauai being colonized first, and younger islands only being colonized as they become available.
-When comparing the results to the earlier fixed-phylogeny epoch results \ref{fig:epoch_RevGadgets_ase}, we recover a greater role for cladogenesis for the younger speciation events.
+When comparing the results to the earlier fixed-phylogeny epoch results in Fig \ref{fig:epoch_RevGadgets_ase}, we recover a greater role for cladogenesis for the younger speciation events.
 These two analyses only differ in terms of whether the phylogeny is fixed or estimated, so it is likely a result of phylogenetic error in the fixed tree.
+
 
 \begin{figure}[!ht]
 \centering
@@ -582,6 +584,7 @@ These two analyses only differ in terms of whether the phylogeny is fixed or est
 \caption{Plot of trace for island ages and the origin time of living silverswords. The left panel ignores paleogeography, allowing silverswords to originate well before the formation of Kauai ({\tt epoch\_times[1]}). The right panel conditions of paleogeography, which prefers a silversword crown age that follows the formation of Kauai.}
 \label{fig:epoch_ages}
 \end{figure}
+
 
 In Tracer, one can look at the sampled posterior of island ages in comparison the origination time of crown silverswords (Fig \ref{fig:epoch_ages}).
 The left panel shows the simple analysis, where crown silverswords often originate before the formation of Kauai.
@@ -598,6 +601,9 @@ epoch & 0.02 & 0.26 & 0.84 & 0.99 \\
 \label{tab:epoch_ages}
 \end{table}
 
+\newpage
+
 By tabulating the results of the deterministic variable {\tt ingroup\_older\_island}, we measure the posterior probability that crown silverswords originated before or after each particular epoch in the model (Table \ref{tab:epoch_ages}).
+Treating $P=0.95$ as significant support for an evolutionary outcome, the epoch model can assert that crown silverswords originated after the formation of Kauai, $P(a_s > a_K) = 0.02 < 1-0.95$, but can only provide weak support that they originated after the formation of Oahu, $P(a_s > a_O) = 0.26 > 1-0.95$.
 
 \newpage
