edits to sections formatting, etc. TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt]{article}
 \input{../preamble}
 
-\newcommand{\QUEST}{{{\colorbox{Apricot}{\bf ?} }}}
+\newcommand{\QUEST}{{{\colorbox{Apricot}{\textbf{\textsf{?}}} }}}
 
 \begin{document}
 \renewcommand{\headrulewidth}{0.5pt}
