minor edit TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -930,7 +930,7 @@ We will now move on to the next model file.
 
 \bigskip
 
-\subsection{Complete MCMC File}\label{subsect:Exercise-CompleteMCMC}
+\subsection{Complete Master \Rev File}\label{subsect:Exercise-CompleteMCMC}
 
 {\begin{framed}
 Return to the master \Rev file you created in section \ref{subsect:Exercise-StartMasterRev} called {\textcolor{red}{\cl{mcmc\_TEFBD.Rev}}} in the \cl{scripts} directory.
@@ -1012,7 +1012,7 @@ monitors[mni++] = mnScreen(printgen=10, age_extant, num_samp_anc, origin_time)
 \end{snugshade*}}
 
 \medskip
-\subsubsection{Set up the MCMC}
+\subsubsection{Set-Up the MCMC}
 
 Once we have set up our model, moves, and monitors, we can now create the workspace variable that defines our MCMC run. 
 We do this using the \cl{mcmc()} function that simply takes the three main analysis components as arguments.
