minor edit TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1313,8 +1313,8 @@ mccTree(trace_pruned, "output/bears.mcc.tre" )
 
 When there are sampled ancestors present in the tree, visualizing the tree can be fairly difficult in traditional tree viewers.
 We will make use of a browser-based tree viewer called \href{http://tgvaughan.github.io/icytree/}{\tt IcyTree}, created by \href{https://github.com/tgvaughan}{Tim Vaughan}.
-{\tt IcyTree} has many unique options for visualizing phylogenetic trees and can produce publication-quality vector files (\IE svg). 
-Additionally, it correctly represents sampled ancestors on the tree as a node with only one descendant (Fig.\ \ref{fig:IcyTreeSumm}). 
+{\tt IcyTree} has many unique options for visualizing phylogenetic trees and can produce publication-quality vector image files (\IE SVG). 
+Additionally, it correctly represents sampled ancestors on the tree as nodes, each with only one descendant (Fig.\ \ref{fig:IcyTreeSumm}). 
 \begin{figure}[h!]
 \fbox{%
 \begin{minipage}{\textwidth}\centering
